rolloff.css
/* Sticky footer styles
-------------------------------------------------- */

html,
body {
  height: 100%;
  /* The html and body elements cannot have any padding or margin. */
}

/* Wrapper for page content to push down footer */
#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  /* Negative indent footer by its height */
  margin: 0 auto -60px;
  /* Pad bottom by footer height */
  padding: 0 0 60px;
}

/* Set the fixed height of the footer here */
#footer {
  height: 60px;
  background-color: #f5f5f5;
}


/* Custom page CSS
-------------------------------------------------- */
/* Not required for template or sticky footer method. */

.container {
  width: auto;
  max-width: 640px;
  padding: 0 15px;
}
.container .credit {
  margin: 20px 0;
}

table th, table td {
  text-align: center;
}

table td:first-child {
  font-weight: bold;
}

.lower {
  padding-bottom: 15px;
}

.btn-block {
  width: 200px;
  margin: auto;
  margin-top: 15px;
}
              
#formAddScore .btn-toolbar {
  margin: auto;
  display: table;
}

#formAddScore button.btn {
  width: 70px;
  height: 50px;
  margin: 5px;
}

